# WingHexNote

./: CMakeLists.txt  README.md  WingHexNote.json  WingHexNote_en_US.ts  WingHexNote_zh_CN.ts  WingHexNote_zh_TW.ts  resources.qrc
src/: noteeditorwidget.cpp  noteeditorwidget.h  winghexnote.cpp  winghexnote.h  wingnotecreator.cpp  wingnotecreator.h
